# controllers/Daily.js
@@ -6,8 +6,7 @@ var Daily = require('../service/DailyService');
 module.exports.listaDailyDia = function listaDailyDia (req, res, next) {
   var date = req.swagger.params['date'].value;
   var page = req.swagger.params['page'].value;
-  var docs = req.swagger.params['docs'].value;
-  Daily.listaDailyDia(date,page,docs)
+  Daily.listaDailyDia(date,page)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -18,8 +17,7 @@ module.exports.listaDailyDia = function listaDailyDia (req, res, next) {
 
 module.exports.listaTodasDaily = function listaTodasDaily (req, res, next) {
   var authorization = req.swagger.params['authorization'].value;
-  var docs = req.swagger.params['docs'].value;
-  Daily.listaTodasDaily(authorization,docs)
+  Daily.listaTodasDaily(authorization)
     .then(function (response) {
       utils.writeJson(res, response);
     })
